moving things around, should have git mv this but whatevs

--- a/notes/continuity.tex
+++ b/notes/continuity.tex
@@ -89,5 +89,5 @@ $|f(g(x))-f(g(a))|<\epsilon$, as desired.
 \subsection{Appendix: fun examples}
 
 %%% Local Variables:
-%%% TeX-master: "notes"
+%%% TeX-master: "index"
 %%% End:
