--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -584,5 +584,5 @@ Similarly if $L\geq 0$ take $x=-\delta/2$. Then
 \[|f(x)-L|=|f(-\delta/2)-L|=\left|\frac{-\delta/2}{|-\delta/2|}-L\right|=|-1-L|>\frac{1}{10}\]
 
 %%% Local Variables:
-%%% TeX-master: "notes"
+%%% TeX-master: "index"
 %%% End:
