--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -2,9 +2,10 @@
 
 \subsection{A hand-wavy limits definition}
 
-I'll first do a hand-wavy definition of limits and a higher level
-"interface" that allows computing actual limits of functions. After
-that I'll do a proper definition and prove everything.
+I'll first do a hand-wavy definition of limits, and then use it to
+explain the mechanics of computing limits of functions in practice.
+Basically, pre-calculus stuff. After that I'll do a proper definition
+and use it to prove the theorems that make the mechanics work.
 
 \vs
 
@@ -26,8 +27,10 @@ The notation for this whole thing is
 So for example $\lim_{x\to5}x^2=25$ because the closer $x$ gets to
 $5$, the closer $x^2$ gets to $25$ (we'll prove all this properly
 soon). Now suppose you have some fancy pants function like this one:
-
-\[\lim_{x\to 0}\frac{1-\sqrt{x}}{1-x}\]
+\begin{equation}
+\label{eq:1}
+\lim_{x\to 0}\frac{1-\sqrt{x}}{1-x}
+\end{equation}
 
 If you plot it, it's easy to see that as $x$ approaches $0$, the whole
 shebang approaches $1$. But how do you algebraically evaluate the
@@ -37,10 +40,10 @@ somehow that plugging $a=0$ into $x$ gives us the correct result.
 
 \subsection{Limits evaluation mechanics}
 
-It turns out that it does in fact work because of a few building
-blocks that allow you to practically evaluate limits of functions.
-I'll first state these as facts, and then go back and properly prove
-them as theorems.
+It turns out that it does in fact work because of a few theorems that
+make practical evaluation of many limits easy. I'll first state these
+theorems as facts, and then go back and properly prove them once I
+introduce the formal definition of limits.
 
 \begin{enumerate}
 \item \textbf{Constants}. $\lim_{x\to a}c=c$, where $c\in\R$. In other
@@ -48,26 +51,29 @@ them as theorems.
   $\lim_{x\to a}f(x)=5$ for any $a$.
 \item \textbf{Identity}. $\lim_{x\to a}x=a$. In other words if the
   function is an identity function $f(x)=x$, then
-  $\lim_{x\to a}f(x)=a$. Meaning we simply plug $a$ into $x$.
-\item \textbf{Addition}.
+  $\lim_{x\to 6}f(x)=6$. Meaning we simply plug $a$ into $x$.
+\item \textbf{Addition}\footnote{Spivak's book uses a slightly more
+    verbose definition that assumes the limits of $f$ and $g$ exist
+    near $a$, see p. 103}.
   $\lim_{x\to a}(f+g)(x)=\lim_{x\to a}f(x)+\lim_{x\to a}g(x)$. For example
-  $\lim_{x\to a}x+2=\lim_{x\to a}x+\lim_{x\to a}2=a+2$.
+  $\lim_{x\to a}(x+2)=\lim_{x\to a}x+\lim_{x\to a}2=a+2$.
 \item \textbf{Multiplication}.
   $\lim_{x\to a}(f\cdot g)(x)=\lim_{x\to a}f(x)\cdot \lim_{x\to a}g(x)$. For example
   $\lim_{x\to a}2x=\lim_{x\to a}2\cdot \lim_{x\to a}x=2a$.
 \item \textbf{Reciprocal}.
   $\lim_{x\to a}\left(\frac{1}{f}\right)(x)=\frac{1}{\lim_{x\to a}f(x)}$
-  (when the denominator isn't zero). For example
-  $\lim_{x\to a}\frac{1}{x}=\frac{1}{\lim_{x\to a}x}=\frac{1}{a}$.
+  when the denominator isn't zero. For example
+  $\lim_{x\to a}\frac{1}{x}=\frac{1}{\lim_{x\to a}x}=\frac{1}{a}$ for
+  $a\neq0$.
 \end{enumerate}
 
-This tells us that
+To come back to \ref{eq:1}, these theorems tells us that
 
 \[\lim_{x\to 0}\frac{1-\sqrt{x}}{1-x}=\frac{\lim_{x\to 0}1-(\lim_{x\to 0}x)^{\frac{1}{2}}}{\lim_{x\to 0}1-\lim_{x\to 0}x}=\frac{1-0^{\frac{1}{2}}}{1-0}=1\]
 
 \subsubsection*{Holes}
 
-What happens if we try to take a limit at $x\to 1$ rather than $x\to 0$?
+What happens if we try to take a limit as $x\to 1$ rather than $x\to 0$?
 
 \[\lim_{x\to 1}\frac{1-\sqrt{x}}{1-x}\]
 
@@ -75,13 +81,13 @@ We can't use the same trick and plug in $1$ because we get a
 nonsensical result $0/0$ as the function isn't defined at $0$. If we
 plot it, we clearly see the limit approaches $1/2$ at $0$, but how do
 we prove this algebraically? The answer is to do some trickery to find
-a way to cancel out the offending term (in this case $1-x$)
+a way to cancel out the inconvenient term (in this case $1-\sqrt{x}$)
 
 \[\lim_{x\to 1}\frac{1-\sqrt{x}}{1-x}=\lim_{x\to 1}\frac{1-\sqrt{x}}{(1-\sqrt{x})(1+\sqrt{x})}=\lim_{x\to 1}\frac{1}{1+\sqrt{x}}=\frac{1}{2}\]
 
 \vs
 
-Why is it ok here to divide out by $1-\sqrt{x}$? Good question! Recall
+Why is it ok here to divide by $1-\sqrt{x}$? Good question! Recall
 that the limit is defined \textit{close to} $a$ (or \textit{around}
 $a$, or as $x$ \textit{approaches} $a$), but not \textbf{at} $a$. In
 other words $f(a)$ need not even be defined (as is the case here).
@@ -95,8 +101,6 @@ it out.
 
 Now we establish a rigorous definition of limits that formalizes the
 hand-wavy version above.
-
-\vs
 
 \paragraph{Definition:} $\lim_{x\to a}f(x)=L$ when for any
 $\epsilon\in\R$ there exists $\delta\in\R$ such that for all $x$,
@@ -112,19 +116,27 @@ will stay within the bounds you specified.
 
 \vs
 
-Formally, $\epsilon$ specifies the distance away from $L$ along the y-axis,
-and $\delta$ specifies the distance away from $a$ along the x-axis. Take
-any $x$ within $\delta$ of $a$, plug it into $f$, and the result is
-guaranteed to be within $\epsilon$ of $L$. $\lim_{x\to a}f(x)=L$ just means
-there exists such $\delta$ for any $\epsilon$.
+So $\epsilon$ specifies the distance away from $L$ along the y-axis, and
+$\delta$ specifies the distance away from $a$ along the x-axis. Take any
+$x$ within $\delta$ of $a$, plug it into $f$, and the result is guaranteed
+to be within $\epsilon$ of $L$. $\lim_{x\to a}f(x)=L$ just means there exists
+such $\delta$ for any $\epsilon$.
 
 \vs
 
 This is quite simple, but the mechanics of the limit definition tend
-to be hard. I think it's because absolute value inequalities are
-unfamiliar. Wtf is $0<|x-a|<\delta$ and $|f(x)-L|<\epsilon$?! Let's tease it
+to confuse people. I think it's because absolute value inequalities
+are unfamiliar. Wtf is $0<|x-a|<\delta$ and $|f(x)-L|<\epsilon$?! Let's tease it
 apart\footnote{The best answer is to go to Khan academy and do a bunch
   of absolute value inequalities until they become second nature.}
+
+\vs
+
+Here is the intuitive reading. $0<|x-a|<\delta$ means the difference
+between $x$ and $a$ is between $0$ and $\delta$. And
+$|f(x)-L|<\epsilon$ means the difference between $f(x)$ and $L$ is less than
+$\epsilon$. This is actually all this means, but still, let's look at the
+inequalities more closely.
 
 \vs
 
@@ -215,7 +227,7 @@ all $x$
 
 \textbf{Claim 3} follows from claims 1 and 2.
 
-\subsection{Proving the evaluation theorems}
+\subsection{Theorems that make evaluation work}
 
 Armed with the formal definition, we can use it to rigorously prove
 the five building blocks useful for evaluating limits (constants,
