Cleaning up uniqueness proof 2

--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -192,7 +192,7 @@ consider a concrete $\epsilon=(L-M)/4$, which we easily find leads to a
 contradiction\footnote{note we assumed $L>M$, thus $\epsilon=(L-M)/4>0$}:
 
 \begin{align*}
-    &\implies L-M<2\epsilon\\
+    &L-M<2\epsilon\\
     &\implies (L-M)/4<\epsilon/2&&\text{dividing both sides by 4}\\
     &\implies \epsilon<\epsilon/2&&\text{recall we set $\epsilon=(L-M)/4$}
 \end{align*}
