--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -201,14 +201,25 @@ We have a contradiction, and so $L=M$ as desired.
 
 \subsubsection*{Half-Value Continuity Lemma}
 
-Suppose $\lim_{x\to a}g(x)=M$. We show that there exists some $\delta$ such
-that $0<|x-a|<\delta$ implies for all $x$:
+This lemma will come in handy later, so we may as well prove it now.
+Intuitively, when a function $g$ approaches a nonzero limit $M$ near a
+point, there exists an interval in which the values of $g$ are closer
+to $M$ than to zero.
+
+\vs
+
+More formally, suppose $\lim_{x\to a}g(x)=M$. We show that there exists
+some $\delta$ such that $0<|x-a|<\delta$ implies for all $x$:
 
 \begin{enumerate}
-    \item If $M>0$ then $g(x)\geq M/2$
-    \item If $M<0$ then $g(x)\leq M/2$
-    \item If $M\neq 0$ then $|g(x)|\geq|M|/2$ and $g(x)\neq 0$
+\item If $M>0$ then $g(x)\geq M/2$
+\item If $M<0$ then $g(x)\leq M/2$
+\item If $M\neq 0$ then $|g(x)|\geq|M|/2$ and $g(x)\neq 0$
 \end{enumerate}
+
+Let's prove each of the three claims individually.
+
+\vs
 
 \textbf{Claim 1} is easy to prove. Suppose $M>0$. Fix $\epsilon=M/2$. By
 limit definition there is some $\delta$ such that $0<|x-a|<\delta$ implies for
@@ -218,7 +229,7 @@ all $x$
     &|g(x)-M|<M/2\\
     &\implies -M/2<g(x)-M\\
     &\implies M/2<g(x)&&\text{add $M$ to both sides}\\
-    &\implies g(x)\geq M/2&&\text{note $\geq$ is correct but not tight}
+    &\implies g(x)>M/2&&\text{note $\geq$ is correct but not tight}
 \end{align*}
 
 \textbf{Claim 2} is similar. Suppose $M<0$. Fix $\epsilon=-M/2$. Then
@@ -226,7 +237,7 @@ all $x$
 \begin{align*}
     &|g(x)-M|<-M/2\\
     &\implies g(x)-M<-M/2\\
-    &\implies g(x)\leq M/2&&\text{add $M$ to both sides}\\
+    &\implies g(x)<M/2&&\text{add $M$ to both sides}\\
     & &&\text{note $\geq$ is correct but not tight}
 \end{align*}
 
