--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -466,11 +466,10 @@ We will show there is no limit of $f(x)$ near $0$.
 
 \paragraph{Weak version.}
 
-First, let's prove a weak version first-- that
-$\lim_{x\to 0}f(x)\neq 0$. That is easy. Pick some reasonably small
-epsilon, say $\epsilon=\frac{1}{10}$. We must show that for any
-$\delta$ there exists an $x$ in $0<|x-a|<\delta$ such that
-$|f(x)-0|\geq \frac{1}{10}$.
+First, let's prove a weak version-- that $\lim_{x\to 0}f(x)\neq 0$. That is
+easy. Pick some reasonably small epsilon, say $\epsilon=\frac{1}{10}$. We
+must show that for any $\delta$ there exists an $x$ in
+$0<|x-a|<\delta$ such that $|f(x)-0|\geq \frac{1}{10}$.
 
 \vs
 
