--- a/notes/continuity.tex
+++ b/notes/continuity.tex
@@ -28,25 +28,25 @@ etc.)
 
 \subsubsection*{Five easy proofs}
 
-\paragraph{Constants}. Let $f(x)=c$. Then $f$ is continuous at all $a$
+\paragraph{Constants.} Let $f(x)=c$. Then $f$ is continuous at all $a$
 because $\lim_{x\to a}f(x)=c=f(a)$.
 
 \vs
 
-\paragraph{Identity}. Let $f(x)=x$. Then $f$ is continuous at all $a$
+\paragraph{Identity.} Let $f(x)=x$. Then $f$ is continuous at all $a$
 because $\lim_{x\to a}f(x)=a=f(a)$.
 
 \vs
 
-\paragraph{Addition}. Let $f,g\in\R\to\R$ be continuous at $a$. Then
+\paragraph{Addition.} Let $f,g\in\R\to\R$ be continuous at $a$. Then
 $f+g$ is continuous at $a$ because
 \[\lim_{x\to a}(f+g)(x)=\lim_{x\to a}f(x)+\lim_{x\to a}g(x)=f(a)+g(a)=(f+g)(a)\]
 
-\paragraph{Multiplication}. Let $f,g\in\R\to\R$ be continuous at $a$. Then
+\paragraph{Multiplication.} Let $f,g\in\R\to\R$ be continuous at $a$. Then
 $f\cdot g$ is continuous at $a$ because
 \[\lim_{x\to a}(fg)(x)=\lim_{x\to a}f(x)\cdot\lim_{x\to a}g(x)=f(a)g(a)=(fg)(a)\]
 
-\paragraph{Reciprocal}. Let $f$ be continuous at $a$. Then $\frac{1}{g}$
+\paragraph{Reciprocal.} Let $f$ be continuous at $a$. Then $\frac{1}{g}$
 is continuous at $a$ where $g(a)\neq 0$ because
 \[\lim_{x\to a}\left(\frac{1}{g}\right)(x)=\frac{1}{\lim_{x\to a}g(x)}=\frac{1}{g(a)}=\left(\frac{1}{g}\right)(a)\]
 (recall that we proved in the limits chapter that $\frac{1}{g}$ is defined.)
